--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: jekyll-theme-chirpy
 
 # Change the following value to '/PROJECT_NAME' ONLY IF your site type is GitHub Pages Project sites
 # and doesn't have a custom domain
-baseurl: 'https://edison-rivera-ciberseguridad.github.io/'
+baseurl: 'https://edisonrivera.github.io/'
 
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
@@ -18,32 +18,32 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: estx.io # the main title
+title: 'Edison Rivera | Backend' # the main title
 
-tagline: Posts sobre ciberseguridad, técnicas y writeups de HackTheBox y Vulnhub # it will display as the sub-title
+tagline: Posts sobre desarrollo backend en Python, Java y demás ;) # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  Posts sobre ciberseguridad, técnicas y writeups de HackTheBox y Vulnhub.
+  Posts sobre desarrollo backend en Python, Java y demás ;).
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://edison-rivera-ciberseguridad.github.io'
+url: 'https://edisonrivera.github.io'
 
 github:
-  username: edison-rivera-ciberseguridad # change to your github username
+  username: edisonrivera.github.io # change to your github username
 
 twitter:
   username: a # change to your twitter username
 
 author:
   name: estx
-  url: 'https://github.com/edison-rivera-ciberseguridad/'
+  url: 'https://github.com/edisonrivera.github.io/'
 
 
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: EsTX
+  name: Edison Rivera
   email: riveraeddy58@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
