--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ description: >- # used by seo meta and the atom feed
 url: 'https://edisonrivera.github.io'
 
 github:
-  username: edisonrivera.github.io # change to your github username
+  username: edisonrivera # change to your github username
 
 twitter:
   username: a # change to your twitter username
